Fix Reference Text Visibility in Highlight

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -1381,6 +1381,14 @@
 				.rem-text {
 					.RichTextViewer {
 						color: var(--reference-text);
+
+						.rem-reference-container {
+							.rem-reference {
+								.RichTextViewer {
+									color: var(--reference-text-dark);
+								}
+							}
+						}
 					}
 				}
 			}
